<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/coupon_header"
            style="@style/TextAppearance.AppCompat.Widget.PopupMenu.Header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_side_margin"
            android:layout_marginTop="@dimen/default_top_margin_xl"
            android:layout_marginEnd="@dimen/default_side_margin"
            android:text="Rate Helen Cake"
            android:gravity="center"
            android:textColor="@color/primary_text"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/coupon_description"
            style="@style/TextAppearance.AppCompat.Widget.PopupMenu.Header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_side_margin"
            android:layout_marginEnd="@dimen/default_side_margin"
            android:textColor="@color/secondary_text"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/default_top_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar"
            android:text="@string/polite_desc" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_rate"
            style="@style/TextAppearance.AppCompat.Widget.PopupMenu.Small"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="@dimen/default_side_margin"
            android:layout_marginEnd="@dimen/default_side_margin"
            android:layout_marginBottom="@dimen/default_bottom_margin"
            android:layout_marginTop="@dimen/default_top_margin"
            android:background="@drawable/bg_action_btn"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/submit_review"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/review_message" />

        <RatingBar
            android:theme="@style/RatingBar"
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1"
            android:rating="5"
            android:layout_marginStart="@dimen/default_side_margin"
            android:layout_marginEnd="@dimen/default_side_margin"
            android:layout_marginTop="@dimen/default_top_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coupon_header" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/review_message"
            android:layout_marginStart="@dimen/default_side_margin"
            android:layout_marginEnd="@dimen/default_side_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_top_margin"
            android:lines="5"
            android:maxLines="5"
            android:maxLength="280"
            android:textColor="@color/primary_text"
            android:padding="@dimen/default_side_margin"
            android:textColorHint="@color/secondary_text"
            android:gravity="top|start"
            android:background="@drawable/bg_review_text"
            android:hint="@string/leave_comment_here"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coupon_description" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>