<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/app_bar">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/default_bottom_margin_l">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_company_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop" />

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="top"
                android:background="@drawable/avatar_gradient_top" />

            <View
                android:id="@+id/profile_gradient_bottom"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="0dp"
                android:background="@drawable/avatar_gradient_bottom" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/editCompany"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="end"
                android:visibility="gone"
                android:background="?selectableItemBackgroundBorderless"
                android:layout_marginTop="@dimen/default_top_margin"
                android:layout_marginEnd="@dimen/default_side_margin"
                android:tint="@color/white"
                android:padding="4dp"
                app:srcCompat="@drawable/baseline_edit_24"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/company_name"
                style="@style/TextAppearance.AppCompat.Widget.PopupMenu.Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/default_side_margin"
                android:layout_marginEnd="@dimen/default_side_margin"
                android:layout_marginBottom="@dimen/default_bottom_margin_l"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@color/white"
                android:textSize="22sp"
                tools:text="company name aefaiwoefhawiefhioaawioef" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/about_header"
            style="@style/TextAppearance.AppCompat.Widget.PopupMenu.Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_side_margin"
            android:layout_marginTop="@dimen/default_top_margin"
            android:text="@string/about_company"
            android:textColor="@color/primary_text"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_layout" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/about_desc"
            style="@style/TextAppearance.AppCompat.Widget.PopupMenu.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_side_margin"
            android:layout_marginTop="@dimen/default_top_margin"
            android:layout_marginEnd="@dimen/default_side_margin"
            android:textColor="@color/primary_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_header"
            tools:text="using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here'" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/coupons_header"
            style="@style/TextAppearance.AppCompat.Widget.PopupMenu.Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_side_margin"
            android:layout_marginTop="@dimen/default_top_margin"
            android:layout_marginEnd="@dimen/default_side_margin"
            android:text="@string/coupons"
            android:textColor="@color/primary_text"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_desc" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_coupons"
            android:layout_width="match_parent"
            android:layout_height="166dp"
            android:nestedScrollingEnabled="true"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coupons_header"
            tools:listitem="@layout/item_coupon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/booklet_header"
            style="@style/TextAppearance.AppCompat.Widget.PopupMenu.Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_side_margin"
            android:layout_marginTop="@dimen/default_top_margin"
            android:layout_marginEnd="@dimen/default_side_margin"
            android:text="@string/booklets"
            android:textColor="@color/primary_text"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_coupons" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_booklets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="true"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/booklet_header"
            tools:listitem="@layout/item_offer" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/external_link_header"
            style="@style/TextAppearance.AppCompat.Widget.PopupMenu.Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_side_margin"
            android:layout_marginTop="@dimen/default_top_margin"
            android:layout_marginEnd="@dimen/default_side_margin"
            android:text="@string/company_links"
            android:textColor="@color/primary_text"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_booklets" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_external_links"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="true"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/external_link_header"
            tools:listitem="@layout/item_external_link" />


        <androidx.cardview.widget.CardView
            android:id="@+id/rating_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_side_margin"
            android:layout_marginTop="@dimen/default_top_margin"
            android:layout_marginEnd="@dimen/default_side_margin"
            android:layout_marginBottom="@dimen/default_bottom_margin_l"
            app:cardCornerRadius="@dimen/card_def_radius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_external_links">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/rating_header"
                    style="@style/TextAppearance.AppCompat.Widget.PopupMenu.Header"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_side_margin"
                    android:layout_marginTop="@dimen/default_top_margin"
                    android:layout_marginEnd="@dimen/default_side_margin"
                    android:layout_marginBottom="@dimen/default_bottom_margin"
                    android:text="@string/rating_and_review"
                    android:textColor="@color/primary_text"
                    android:textSize="22sp"
                    app:layout_constraintEnd_toStartOf="@id/company_rating"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/company_rating"
                    style="@style/TextAppearance.AppCompat.Widget.PopupMenu.Header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_side_margin"
                    android:background="@drawable/bg_rating"
                    android:paddingStart="8dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="4dp"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@id/rating_header"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/rating_header"
                    tools:text="4.0" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_side_margin_s"
                    android:nestedScrollingEnabled="true"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rating_header"
                    tools:listitem="@layout/item_rate" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/add_rating"
                    style="@style/TextAppearance.AppCompat.Widget.PopupMenu.Header"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="@dimen/default_side_margin"
                    android:layout_marginTop="@dimen/default_top_margin"
                    android:layout_marginEnd="@dimen/default_side_margin"
                    android:background="@drawable/bg_comment"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/rate_company"
                    android:textColor="@color/primary_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rv_rate" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/more_comments"
                    style="@style/TextAppearance.AppCompat.Widget.PopupMenu.Header"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="@dimen/default_side_margin"
                    android:layout_marginTop="@dimen/default_top_margin"
                    android:layout_marginEnd="@dimen/default_side_margin"
                    android:layout_marginBottom="@dimen/default_bottom_margin"
                    android:background="@drawable/bg_comment"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/show_more"
                    android:textColor="@color/primary_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/add_rating" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="rv_booklets,rv_coupons,about_desc,coupons_header,booklet_header,about_header, external_link_header, rv_external_links,rating_bar"
            tools:visibility="visible" />

        <include
            android:id="@+id/shimmer"
            layout="@layout/company_shimmer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />

        <com.freebie.frieebiemobile.ui.utils.PlaceHolderView
            android:id="@+id/company_placeholder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
